修正  - 前台前端模板风格  - 前台前端特效插件bug
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/article/templates/about.htm
+++ b/article/templates/about.htm
@@ -1,14 +1,12 @@
 {% extends "shop.base.htm" %}
 
 {% block middle %}
-        <div id="left">
-            <ul id="lm">
-                <li><a href="{% url 'article:about' %}" class="on">关于31客</a></li>
-                <li><a href="{% url 'article:ex' %}">关于K金</a></li>
-                <li><a href="{% url 'article:guide' %}">订购指南</a></li>
-            </ul>
-        </div>
-        <div id="right">
+        <menu id="sidebar">
+            <li><a href="{% url 'article:about' %}" class="on">关于31客</a></li>
+            <li><a href="{% url 'article:ex' %}">关于K金</a></li>
+            <li><a href="{% url 'article:guide' %}">订购指南</a></li>
+        </menu>
+        <article>
             <h3>做最好的提拉米苏</h3>
             <p>提拉米苏的故事,相信许多人都听过，它最早起源于意大利。</p>
             <p>讲的是一位士兵上战场前，心急如焚的爱人因为没有时间烤制蛋糕,只好手忙脚乱地胡乱混合了鸡蛋、可可粉、手指饼、甜酒做成一个速成的蛋糕。虽然制作仓促，但蛋糕却甘香馥郁、嫩滑可口，并满怀着爱人的深深情意，因而提拉米苏的其中的一个含义是&ldquo;记住我&rdquo;。喜欢一个人， 跟他去天涯海角， 而不仅仅是让他记住。所以，提拉米苏还有个含义是&ldquo;带我走&rdquo;。</p>
@@ -35,5 +33,5 @@
             <p>真正的蛋糕，需要最好的蛋糕师，31客蛋糕能令有十几年丰富经验的蛋糕师头疼。在国内，最好的蛋糕师是要能在蛋糕上裱各种形象，但对于纯天然的乳脂奶油来说，31客拒绝添加稳定剂，注重的是口味而非造型。所以，老师傅来到31客，还得重头学起。</p>
             <p>真正的蛋糕也有缺点。31客蛋糕，由于全部采用乳脂奶油制作，因此保质期很短，也正因如此，31客的蛋糕对于温度的要求也是极为苛刻的。为获得最佳口感，蛋糕全部都是在预约日期当天制作和送出的。31客采用专门制作的冰包来保持蛋糕的低温状态5-7个小时。</p>
             <p>有些追求，你无法看到,追求乳品的品质，坚持使用产自天然牧场的牛奶和乳酪，让你在享受美味的同时兼顾健康的生活。有一些努力，你可能看不到，31客的每一位员工用心做好每一块蛋糕，每一块都纯手工制作，独一无二，与众不同。这些你看不到的努力全部融在这小小的蛋糕里，看不到，却吃得到。</p>
-        </div>
+        </article>
 {% endblock %}
