--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -241,7 +241,7 @@ body {
         width: 100%;
         display: inline-block;
         background: url(/static/shop/images/menu.jpg) bottom repeat-x;
-        margin: 1em 0 1.5em 0;
+        margin: 0.75em 0 1.5em 0;
         line-height: 0.5;
 
         a {
@@ -262,7 +262,7 @@ body {
     footer {
         width: 100%;
         display: inline-block;
-        menu {
+        address {
             float: left;
         }
         em {
@@ -270,13 +270,15 @@ body {
         }
     }
 
-    #middle {
+    section {
         height:auto !important;
         height: 200px;
         width: 100%;
         display: inline-block;
-        min-height: 25em;
+        min-height: 30em;
         padding-bottom: 2em;
+        font-size: 0.75em;
+
         .messagelist {
             padding-bottom: 1em;
             li {
@@ -422,20 +424,35 @@ body {
 
                 }
             }
-
-
         }
+
+        #bner {
+            width: 100%;
+            height: 530px;
+            padding-bottom: 20px;
+            float: left;
+        }
+        #sidebar {
+            width: 20%;
+            float: left;
+            font-size: 0.875em;
+            li {
+                padding: 0 2em 0 0.5em;
+                a {
+                    line-height: 2;
+                }
+            }
+        }
+        #content {
+            width: 80%;
+            float: right;
+        }
+
     }
 
 }
 
 
-#middle #bner {
-    width: 100%;
-    height: 530px;
-    padding-bottom: 20px;
-    float: left;
-}
 #middle .lsv {
     float: left;
     padding-bottom: 15px;
@@ -505,22 +522,7 @@ body {
     font-weight: bold;
     color: #422819;
 }
-#middle #left {
-    width: 20%;
-    float: left;
-}
-* #middle #left {
-    width: 18%;
-}
-#middle #left #lm {
-    float: left;
-    font-size: 14px;
-    line-height: 2;
-}
-#middle #left #lm li {
-    width: 100%;
-    float: left;
-}
+
 #middle #right {
     width: 80%;
     float: right;
